feat(15164): add forgot password on login page (#752)
* feat(15164): add forgot password on login page

* refactor(15164): add construction of reset url

* refactor(15164): url refactor

* fix(15164): fix Forgot Password link

---------

Co-authored-by: Natallia Harshunova <nattallius@gmail.com>
Co-authored-by: Aliaksandr Baranau <abaranau.dev@gmail.com>

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -306,6 +306,7 @@
     "sign_up": "Sign up",
     "logging_in": "Logging in...",
     "log_in": "Log in",
+    "forgot_password": "Forgot password?",
     "description": "Please log in to change your settings",
     "error": {
       "email_empty": "Email cannot be empty",
