feat(18228): add payment plans integration with BE

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -315,6 +315,10 @@
       "connect": "Could not connect to authentication service"
     }
   },
+  "subscription": {
+    "title": "Plans & Pricing",
+    "price_summary": "* Billed as {{pricePerYear}} once yearly"
+  },
   "reports": {
     "title": "Disaster Ninja Reports",
     "no_data": "No data for this report",
