feat(18402): add Terms page

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -348,7 +348,8 @@
     "about": "About",
     "reports": "Reports",
     "profile": "Profile",
-    "privacy": "Privacy"
+    "privacy": "Privacy",
+    "terms": "Terms"
   },
   "about": {
     "title": "Welcome to Disaster Ninja!",
