feat(18479): add dropdown items for new transformation functions

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -120,8 +120,14 @@
       "reset_limits_to_default": "Reset limits to default",
       "exclude": "Exclude",
       "as_values_on_limits": "As values on limits",
-      "natural_logarithm": "Logarithm",
-      "square_root": "Square root",
+      "transformations": {
+        "no_transformation": "No transformation",
+        "natural_logarithm": "Logarithm",
+        "square_root": "Square root: sign(x)√(|x|)",
+        "cube_root": "Cube root: : ∛x",
+        "log_one": "Log(x - xmin + 1)",
+        "log_epsilon": "Log(x - xmin + ε)"
+      },
       "no": "No",
       "max_min": "Max-min",
       "errors": {
