--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -120,6 +120,7 @@
       "reset_limits_to_default": "Reset limits to default",
       "exclude": "Exclude",
       "as_values_on_limits": "As values on limits",
+      "outliers_keep": "Keep",
       "natural_logarithm": "Logarithm",
       "square_root": "Square root",
       "no": "No",
