--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -118,8 +118,11 @@
       "normalize": "Normalize",
       "normalization": "Normalization",
       "reset_limits_to_default": "Reset limits to default",
-      "exclude": "Exclude",
-      "as_values_on_limits": "As values on limits",
+      "outliers_options": {
+        "clamp": "Clamp",
+        "hide": "Hide",
+        "dont_modify": "Don't modify"
+      },
       "transformations": {
         "no_transformation": "No transformation",
         "square_root": "Square root: sign(x)√(|x|)",
