fix(19198): create translation to usd currency

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -325,6 +325,9 @@
       "connect": "Could not connect to authentication service"
     }
   },
+  "currency": {
+    "usd": "USD"
+  },
   "subscription": {
     "title": "Plans & Pricing",
     "price_summary": "* Billed as {{pricePerYear}} USD once yearly",
