fix(19198): update atlas plans currency formatting (#811)
* fix(19198): update atlas plans currency formatting

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -325,9 +325,12 @@
       "connect": "Could not connect to authentication service"
     }
   },
+  "currency": {
+    "usd": "USD"
+  },
   "subscription": {
     "title": "Plans & Pricing",
-    "price_summary": "* Billed as {{pricePerYear}} once yearly",
+    "price_summary": "* Billed as {{pricePerYear}} USD once yearly",
     "unauthorized_button": "Sign in to subscribe",
     "current_plan_button": "Current plan",
     "errors": {
