--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -330,7 +330,7 @@
   },
   "subscription": {
     "title": "Plans & Pricing",
-    "price_summary": "* Billed as {{pricePerYear}} USD once yearly",
+    "price_summary": "* Billed as ${{pricePerYear}} USD once yearly",
     "unauthorized_button": "Sign in to subscribe",
     "current_plan_button": "Current plan",
     "errors": {
