--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -133,8 +133,8 @@
         "no_transformation": "No transformation",
         "square_root": "Square root: sign(x)√(|x|)",
         "cube_root": "Cube root: ∛x",
-        "log_one": "Log(x - xmin + 1)",
-        "log_epsilon": "Log(x - xmin + ε)"
+        "log_one": "log₁₀(x - xmin + 1)",
+        "log_epsilon": "Log₁₀(x - xmin + ε)"
       },
       "no": "No",
       "max_min": "Max-min",
