fix: lowercase log for log + epsilon transformation

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -134,7 +134,7 @@
         "square_root": "Square root: sign(x)√(|x|)",
         "cube_root": "Cube root: ∛x",
         "log_one": "log₁₀(x - xmin + 1)",
-        "log_epsilon": "Log₁₀(x - xmin + ε)"
+        "log_epsilon": "log₁₀(x - xmin + ε)"
       },
       "no": "No",
       "max_min": "Max-min",
