--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -131,7 +131,7 @@
       },
       "transformations": {
         "no_transformation": "No transformation",
-        "square_root": "Square root: sign(x)√(|x|)",
+        "square_root": "Square root: sign(x)⋅√|x|",
         "cube_root": "Cube root: ∛x",
         "log_one": "log₁₀(x - xmin + 1)",
         "log_epsilon": "log₁₀(x - xmin + ε)"
