implement title updates, fix default route fallback

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -365,7 +365,9 @@
   "modes": {
     "map": "Map",
     "about": "About",
+    "cookies": "Cookies",
     "reports": "Reports",
+    "report": "Report",
     "profile": "Profile",
     "privacy": "Privacy",
     "terms": "Terms"
