--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -373,7 +373,8 @@
     "report": "Report",
     "profile": "Profile",
     "privacy": "Privacy",
-    "terms": "Terms"
+    "terms": "Terms",
+    "user_guide": "User guide"
   },
   "about": {
     "title": "Welcome to Disaster Ninja!",
