feat(about): 19871 Add "User Guide" page (#868)
* feat(About): 19871 Add "User guide" page

* feat: make User Guide tab disabled if its unavailable

* fix(MD inner links) 19871 Fix inner anchor links inside MD document

* feat(about): Map visible about subTabs from app config

* chore: change icon for User Guide nav menu item

* chore: rename function

* chore: add type for AboutFeatureConfig

* chore: small refactors

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -374,7 +374,8 @@
     "report": "Report",
     "profile": "Profile",
     "privacy": "Privacy",
-    "terms": "Terms"
+    "terms": "Terms",
+    "user_guide": "User guide"
   },
   "about": {
     "title": "Welcome to Disaster Ninja!",
