--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -436,6 +436,7 @@
   },
   "episode": "Timeline",
   "loading_episodes": "Loading Episodes",
+  "zoom_to_world": "Zoom to the whole world",
   "cookie_banner": {
     "header": "We value your privacy",
     "body": "We use absolutely necessary cookies to provide you personalized services and optional cookies to improve {{appName}} and your experience. You can manage cookie settings or withdraw consent to optional cookies at any time.\nFor more information, please, check our [Privacy Policy](about/privacy)",
