--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -126,7 +126,6 @@
         "2_sigma": "2σ",
         "1_sigma": "1σ"
       },
-
       "outliers_options": {
         "clamp": "Clamp",
         "hide": "Hide",
@@ -159,6 +158,16 @@
     },
     "bad": "Bad",
     "good": "Good"
+  },
+  "search": {
+    "info_block": "You can search for \uD83D\uDCCD locations or ask ✨ AI your question like “Dead wood\n              analysis”",
+    "input_placeholder": "Search",
+    "input_placeholder_mcda": "Search or ask AI",
+    "mcda_loading_message": "AI is generating an analysis for you",
+    "mcda_no_result": "No AI analysis this time",
+    "mcda_error_message": "AI engine did not respond. Please try again later",
+    "mcda_create_analysis": "Create analysis",
+    "upload_analysis": "“{{name}}”  Multi-Criteria Decision Analysis has been created"
   },
   "event_list": {
     "warning_title": "Cannot filter by map view",
