css md refactor and cleanup

--- a/src/core/pages/__mocks__/_.md
+++ b/src/core/pages/__mocks__/_.md
@@ -24,19 +24,23 @@ Use these insights to make smart decisions, like picking the perfect spot for yo
 
 Your next big opportunity is waiting to be mapped out!
 
-## _[Get access](https://www.kontur.io/atlas)_ [Log in](/profile)
+## _[Subscribe to Atlas](/pricing)_ wrapped in "\_"
+
+### **[Subscribe to Atlas](/pricing)** "\_\_"
+
+### **_[Subscribe to Atlas](/pricing)_** "\_\_\*"
 
 ## How to Use
 
 ---
 
-## ![Area Selection](about-atlas-3.png)
+![youtube](https://www.youtube.com/embed/g7WMD10DMPs?si=Gl6RdNM0L3ufi0uF::800,470,true)
 
 ### Area Selection
 
 To choose an area for analysis, you can use the toolbar to select an administrative unit, draw a shape manually, or import a GeoJSON file.
 
-## ![Analytics Panel](about-atlas-4.png)
+![youtube](https://www.youtube.com/embed/aCXaAYEW0oM::800,470,true)
 
 ### Analytics Panel
 
@@ -51,7 +55,7 @@ Compares your area's data with global averages, alerting you to any significant 
 Reference Area: This allows you to set a known area as a reference point for comparisons and highlights differences.
 Bio: Here, you can record details like who you're working for, your analysis purpose, and key topics, helping to personalize AI conclusions.
 
-## ![Creating Custom Analysis](about-atlas-5.png)
+![youtube](https://www.youtube.com/embed/Md5Mex-POBo::800,470,true)
 
 ### Creating Custom Analysis
 
@@ -68,3 +72,7 @@ By default, the map displays red hexagons in high-value areas and green hexagons
 #### Layer Customization
 
 Enhance your analysis by fine-tuning the range and what is bad and good of each layer. This means you can focus specifically on aspects crucial to your study.
+
+---
+
+### _[Learn more on kontur.io](https://www.kontur.io/atlas)_
