feat(LLM analytics): 19963 updated LLM analytics help section

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -233,7 +233,13 @@
   },
   "llm_analytics": {
     "header": "AI insights",
-    "header_info": "📝 Fill out your [bio](/profile)  \n🌟 Save an area you know well as a reference  \n📚 Select an area you want to explore"
+    "guide": {
+      "select_area": "Select area (<icon1 />,<icon2 />,<icon3 />) you want to explore to get AI Insights.",
+      "you_can_also": "You can also:",
+      "fill_bio": "<icon /> <lnk>Fill out bio</lnk> to personalize AI analysis",
+      "select_and_save_as_reference_area": "<icon /> Select an area and save it as a reference to compare with another one",
+      "learn_more": "<lnk><icon/> Learn more about AI Insights</lnk>"
+    }
   },
   "draw_tools": {
     "area": "Polygon",
