bugfix(20332): fix banner text depending on feature enabled

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -160,7 +160,8 @@
     "good": "Good"
   },
   "search": {
-    "info_block": "You can search for 📍 locations or ask ✨ AI your question like “Where is dead wood”",
+    "info_block": "You can search for 📍 locations",
+    "info_block_with_mcda": "You can search for 📍 locations or ask ✨ AI your question like “Where is dead wood”",
     "input_placeholder": "Search",
     "input_placeholder_mcda": "Search or ask AI",
     "locations_no_result": "No locations found",
