feat(20278): add startedAt info to EventCard

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -45,6 +45,7 @@
   "deselect": "Deselect",
   "spinner_text": "Gathering data",
   "updated": "Updated",
+  "started": "Started",
   "no_data_received": "No data received",
   "wrong_data_received": "Wrong data received",
   "error": "Error",
