--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -419,6 +419,9 @@
     "metric": "metric",
     "imperialBeta": "imperial (beta)",
     "profileSettingsHeader": "Personalize your experience",
+    "improves_analysis": "Improves analysis",
+    "bio_textarea_placeholder": "Example: GIS Analyst in urban planning, interested in climate resilience. My current challenge is optimizing flood risk maps.",
+    "analysis_objectives": "Analysis objectives",
     "appSettingsHeader": "Settings",
     "your_organization": "Your organization",
     "your_contacts": "Your contacts",
