--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -419,12 +419,14 @@
     "metric": "metric",
     "imperialBeta": "imperial (beta)",
     "profileSettingsHeader": "Personalize your experience",
+    "personalization_prompt": "For better personalization, please include details such as:",
+    "ai_tools_compatibility": "This information is compatible with AI tools",
     "improves_analysis": "Improves analysis",
     "bio_textarea_placeholder": "Example: GIS Analyst in urban planning, interested in climate resilience. My current challenge is optimizing flood risk maps.",
     "analysis_objectives": "Analysis objectives",
     "appSettingsHeader": "Settings",
     "your_organization": "Your organization",
-    "your_contacts": "Your contacts",
+    "your_contacts": "Your contact info",
     "organization_name": "Organization name",
     "position": "Position",
     "gis_specialists": "GIS specialists in your team",
@@ -451,7 +453,7 @@
       "title": "Reference area",
       "freehand_geometry": "Freehand geometry",
       "to_replace_reference_area": "To replace reference area, select an area on the map and click \"Save as reference area\" on toolbar.",
-      "select_are_on_the_map": "Select an area on the map and click \"Save as reference area\" on toolbar to use it in further analysis.",
+      "description": "Save an area you are familiar with as a reference. We will use it as a baseline to compare other areas and explain the differences.",
       "set_the_reference_area": "Set area on map"
     }
   },
