feat(20263): update texts

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -419,6 +419,9 @@
     "metric": "metric",
     "imperialBeta": "imperial (beta)",
     "profileSettingsHeader": "Personalize your experience",
+    "your_current_job": "your current job",
+    "area_of_expertise": "area of expertise",
+    "challenges": "challenges",
     "personalization_prompt": "For better personalization, please include details such as:",
     "ai_tools_compatibility": "This information is compatible with AI tools",
     "improves_analysis": "Improves analysis",
