feat(20263): implement new onboarding profile (#930)

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -419,9 +419,24 @@
     "email": "Email",
     "metric": "metric",
     "imperialBeta": "imperial (beta)",
-    "profileSettingsHeader": "Profile",
+    "profileSettingsHeader": "Personalize your experience",
+    "your_current_job": "your current job",
+    "area_of_expertise": "area of expertise",
+    "challenges": "challenges",
+    "personalization_prompt": "For better personalization, please include details such as:",
+    "ai_tools_compatibility": "This information is compatible with AI tools",
+    "improves_analysis": "Improves analysis",
+    "bio_textarea_placeholder": "Example: GIS Analyst in urban planning, interested in climate resilience. My current challenge is optimizing flood risk maps.",
+    "analysis_objectives": "Analysis objectives",
     "appSettingsHeader": "Settings",
+    "your_organization": "Your organization",
+    "your_contacts": "Your contact info",
+    "organization_name": "Organization name",
+    "position": "Position",
+    "gis_specialists": "GIS specialists in your team",
     "saveButton": "Save changes",
+    "phone_number_with_country_code": "Phone number with country code",
+    "linkedin": "LinkedIn profile",
     "konturTheme": "Kontur",
     "HOTTheme": "HOT",
     "user_bio_placeholder": "Bio",
@@ -442,8 +457,8 @@
       "title": "Reference area",
       "freehand_geometry": "Freehand geometry",
       "to_replace_reference_area": "To replace reference area, select an area on the map and click \"Save as reference area\" on toolbar.",
-      "select_are_on_the_map": "Select an area on the map and click \"Save as reference area\" on toolbar to use it in further analysis.",
-      "set_the_reference_area": "Set reference area"
+      "description": "Save an area you are familiar with as a reference. We will use it as a baseline to compare other areas and explain the differences.",
+      "set_the_reference_area": "Set area on map"
     }
   },
   "current_event": {
