feat(20430): split bio into 2 separate fields (#973)
* feat(20430): split bio into 2 separate fields

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -427,8 +427,10 @@
     "personalization_prompt": "For better personalization, please include details such as:",
     "ai_tools_compatibility": "This information is compatible with AI tools",
     "improves_analysis": "Improves analysis",
-    "bio_textarea_placeholder": "Example: GIS Analyst in urban planning, interested in climate resilience. My current challenge is optimizing flood risk maps.",
+    "bio_placeholder": "Bio",
+    "bio_textarea_placeholder": "e.g. GIS specialist with 5+ years of experience in disaster risk analysis, focused on urban resilience.",
     "analysis_objectives": "Analysis objectives",
+    "objectives_textarea_placeholder": "e.g. Urban planning analysis with a focus on climate resilience. My current challenge is improving flood risk mapping.",
     "appSettingsHeader": "Settings",
     "your_organization": "Your organization",
     "your_contacts": "Your contact info",
@@ -440,8 +442,6 @@
     "linkedin": "LinkedIn profile",
     "konturTheme": "Kontur",
     "HOTTheme": "HOT",
-    "user_bio_placeholder": "Bio",
-    "user_bio_tooltip": "Tell us about yourself:\n  •  your current role\n  •  professional skills\n  •  interests\n  •  industry\n  •  objectives or challenges you tackle\nThis bio helps customize and personalize your experience.",
     "defaultDisasterFeed": "Default disaster feed",
     "defaultOSMeditor": "Default OpenStreetMap editor (beta)",
     "successNotification": "All changes have been applied successfully",
