fix(20428): add new organization section, linkedin, profile fileds

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -438,13 +438,14 @@
     "position": "Position",
     "gis_specialists": "GIS specialists in your team",
     "saveButton": "Save changes",
-    "phone_number_with_country_code": "Phone number with country code",
+    "phone_number": "Phone number with country code",
     "linkedin": "LinkedIn profile",
     "konturTheme": "Kontur",
     "HOTTheme": "HOT",
     "defaultDisasterFeed": "Default disaster feed",
     "defaultOSMeditor": "Default OpenStreetMap editor (beta)",
     "successNotification": "All changes have been applied successfully",
+    "dont_know": "I don’t know",
     "languageOption": {
       "en": "English",
       "es": "Spanish",
