20661 fe implement multivariate layers with bivariate style (#968)
* feat(mv layer): add control button for uploading multivariate layer

* chore: update types in mountMCDALayer() and addMCDAPopup in BivariateRenderer

* feat: Add abstract ClickableTilesRenderer. Use MultivariateRenderer. Render multivariate layers with base and strength

* feat: stub for adding label (currently not working because of CORS)

* feat: add extrusion and text layers

* feat: add format string for label axis

* feat: basic multivariate popup

* feat(multivariate): 20145 basic LayerEditor and Legend placeholders for Multivariate layers

* fix: fix printing dimension name in printValue

* chore: fix legend-related type errors

* chore: fix type errors, use MapLibre types

* feat: add MULTIVARIATE_ANALYSIS feature flag

* fix: better key in MultivariateLayerEditor

* feat: add additional (text, extrusion) layers cleanup to MultivariateRenderer

* chore: better key in PopupMCDA

* feat: Basic bivariate style for Multivariate layers

* feat: save baseValue and annexValue expressions as variables

* feat: show proper MCDA legend for Multivariate layers

* feat: show Bivariate legend for Multivariate layer

* chore: added TODO

* chore: rename fields: "base" -> "score", "annex" -> "base", swap their position in bivariate style

* feat: show axis labels

* feat: add step overrides to config

* fix: fix incorrectly assigned classes

* chore: rename tileLabel field to text

* chore: simplify type

* chore: extract Hexagon from bivariate popup as separate component

* feat: show hex class on Multibivariate popup

* fix: fix opening popup when the hex is obstructed by other layers

* fix: fix error message in Bivariate renderer

* feat: support backend-side layers with 'multivariate' type

* fix: open multivariate files as style, not config

* Setting the light for Extrusion layers: Added comment

* chore(20661): Remove Extrusion layer functionality (not part of current story)

* chore(20661): remov

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -162,6 +162,13 @@
     "bad": "Bad",
     "good": "Good"
   },
+  "multivariate": {
+    "upload_analysis_layer": "Upload analysis layer",
+    "popup": {
+      "score_header": "Score {{level}}",
+      "base_header": "Base {{level}}"
+    }
+  },
   "search": {
     "search_location": "Search location",
     "info_block": "You can search for 📍 locations",
