Update common.json - add Belarusian and Russian

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -461,6 +461,8 @@
       "ko": "Korean",
       "id": "Indonesian",
       "de": "German",
+      "be": "Belarusian",
+      "ru": "Russian",
       "uk": "Ukrainian"
     },
     "reference_area": {
