update common.po for Belarusian

--- a/src/core/localization/gettext/be/common.po
+++ b/src/core/localization/gettext/be/common.po
@@ -543,8 +543,10 @@ msgstr ""
 msgid ""
 "Adjusts values to a standardized scale. This helps compare them easily and "
 "make decisions.\n"
-"* **Standard score scaling**: This option adjusts values to a стандартызаваную шкалу, забяспечваючы іх супастаўнасць.\n"
-"* **No (for specialists only)**: Захоўвае значэнні без змен."
+"* **Standard score scaling**: This option adjusts values to a standardized "
+"scale, ensuring they are all comparable.\n"
+"* **No (for specialists only)**: Leaves values unmodified."
+
 msgstr ""
 "Прыводзіць значэнні да стандартызаванай шкалы. Гэта дапамагае лёгка параўноўваць іх і прымаць рашэнні.\n"
 "* **Стандартызацыя па Z-выніках**: Гэты варыянт прыводзіць значэнні да стандартызаванай шкалы, робячы іх супастаўнымі.\n"
